Fix link colors and add "Jump to Today" link.

--- a/app/assets/stylesheets/_calendar.scss
+++ b/app/assets/stylesheets/_calendar.scss
@@ -14,6 +14,9 @@ table.calendar {
       margin-top: 0.25em;
     }
     a { color: white; }
+    &.secondary a {
+      color: #222;
+    }
   }
 
   a.edit {
