--- a/app/assets/stylesheets/_general.scss
+++ b/app/assets/stylesheets/_general.scss
@@ -1,3 +1,8 @@
+.button + .button {
+  margin-left: 0.5em;
+  margin-right: 0.5em;
+}
+
 ul#main_navigation {
   margin: 1em 0;
   padding: 0 0 20px 10px;
